maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:7: error: not found: value EST
        case EST => gauche();
             ^IslandMaze:8: error: not found: value WEST
        case WEST => droite();
             ^