maze.island.IslandMaze.scala.code
override def run() {
    while(!estSurBiscuit()){
    var possible = true;
    while(possible){
      getDirection() match{
        case EST => gauche();
        case WEST => droite();
      }
      if(!estFaceMur()){
        avance();
      } else {
        possible = false;
      }
    }
    if(estFaceMur()){
      gauche();
      if(estFaceMur()){
        droite();droite();
      } else {
        avance();
      }
    } else {
      gauche();
      if(estFaceMur()){
        droite();avance();
      } else {
        avance();gauche();
        if(!estFaceMur()){
          avance();
        } else {
          droite();
        }
      }
    }
  }
  prendBiscuit();
}

def vaAuNord(){
  
} 